# mcp-jira

./: Cargo.toml  README.md  mcp-server.toml
src/: client.rs  main.rs  server.rs
